# git_repos_code_evalutions

./: .gitignore  Pipfile  cli_code_evaluation_metrics.py  cli_code_git_diff.py  cli_conclusion_metrics.py  requirements.txt  setup.cfg  setup.py
results/1- web/2016/: August-first-web-apps.json  July-third-web-apps.json  June-first-web-apps.json
results/1- web/2017/: April-third-web-apps.json  December-first-web-apps.json  Februery-third-web-apps.json
results/1- web/2018/: April-second-web-apps.json  July-first-web-apps.json  March-second-web-apps.json  September-third-web-apps.json
results/1- web/2019/: August-third-web-apps.json  December-second-web-apps.json
results/1- web/2020/: Februery-second-web-apps.json  Januery-second-web-apps.json  July-second-web-apps.json  July-third-web-apps.json  June-third-web-apps.json
results/2- with-tags/2016/: April-first-repos-with-tags.json  April-second-repos-with-tags.json  April-third-repos-with-tags.json  August-first-repos-with-tags.json  August-second-repos-with-tags.json  August-third-repos-with-tags.json  December-first-repos-with-tags.json  December-second-repos-with-tags.json  December-third-repos-with-tags.json  (+27 more)
src/code_evaluation_metrics/: ___main___.py  run_app.py
src/entities/: repos.py  result_file.py
src/get_programming_languages_precentage/: __main__.py  get_precentage.py
src/gui/: dashboard.py
src/repo_evaluation_metrics/: __main__.py  helpers.py  run_evaluation.py
src/repo_extract_conclusion/: __main__.py  run_conclusion.py
src/repo_tag_diffs/: ___main___.py  run_app.py
(+461 files in other folders)
