[metadata]
# replace with your username:
name = code_evaluation_metrics-Mehrnoosh
version = 0.0.1
author = Mehrnoosh
author_email = mehrnoosh.rigi@gmail.com
description = Evaluate required metrics of thesis for filtered repositories
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src